# core-sdk-python

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  TODO  TODO.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.rst  license.rst  reference.rst
example/: config.py  create-data.py  endorse-goods.py
src/iov42/core/: __init__.py  __main__.py  _client.py  _crypto.py  _entity.py  _exceptions.py  _httpclient.py  _models.py  _request.py  _response.py
tests/: __init__.py  config.py  conftest.py  create-identity-requests.txt  test_asset.py  test_asset_type.py  test_client.py  test_create_asset.py  test_create_asset_type.py  test_create_entity.py  test_create_identity.py  test_crypto.py  test_get_request.py  test_identity.py  test_integration.py  test_main.py  test_platform_errors.py  test_put_request.py  test_read_entity.py  test_request.py
