[tool.poetry]
name = "iov42-core-python"
version = "0.0.0"
description = "Python library for convenient access to the iov42 platform."
authors = ["Max Hofer <max@iov42.com>"]
license = "MIT"
packages = [
    { include = "iov42", from = "src" }
]
readme = "README.rst"
homepage = "https://github.com/iov42/core-sdk-python"
repository = "https://github.com/iov42/core-sdk-python"
documentation = "https://iov42-core-python.readthedocs.io"
classifiers = [
# Disabled due to unspoorted dataclass
#    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/iov42/core-sdk-python/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
cryptography = "^3.1.1"
httpx = "^0.16"
dataclasses = {version = "^0.7", python = "3.6"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "~2.9.1"
xdoctest = "^0.15.0"
sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
darglint = "^1.5.4"
reorder-python-imports = "^2.3.5"
pre-commit-hooks = "^3.2.0"
rope = "^0.17.0"
respx = "^0.13.0"

[tool.poetry.scripts]
iov42 = "iov42.core.__main__:main"

[tool.pytest.ini_options]
markers = [
    "errortest: marks tests with platform errors (deselect with '-m \"not errortest\"')",
    "integr: marks tests using a real platform (deselect with '-m \"not integr\"')",
]
addopts = "-m \"not integr\""

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["iov42.core"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
